# soundshed-guitar

./: .gitignore  .gitmodules  README.md  build_linux.sh  build_macos.sh  build_windows.bat  changelog.md  docs.bat
.github/: copilot-instructions.md
.github/workflows/: build-installer.yml  build-linux.yml  build-macos.yml  build-windows.yml  publish-release.yml
api/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
api/src/: index.ts
api/src/lib/: content-config.ts  db.ts  email.ts  http.ts  turnstile.ts  utils.ts
api/src/middleware/: session.ts
api/src/routes/: app.ts  auth.ts  discovery.ts  health.ts  items.ts  module-sessions.ts  packs.ts  tone-advisor.ts  uploads.ts
api/src/types/: env.ts
api/test/: content-config.test.ts  module-sessions.test.ts
core/: CMakeLists.txt  README.md
core/cmake/: FindIPP.cmake  GuitarfxIPP.cmake  GuitarfxWindowsArch.cmake
core/config/: GuitarFXConfig.h
core/src/: IPluginHost.h  MessageDispatcher.cpp  MessageDispatcher.h  PluginController.cpp  PluginController.h  UiBridge.cpp
core/src/automation/: AutomationSlotTable.cpp  AutomationSlotTable.h  AutomationTypes.h  ParamRegistry.cpp  ParamRegistry.h
core/src/controller/: DemoPreviewService.cpp  DemoPreviewService.h
core/src/dispatcher/: MessageDispatchAutomation.cpp  (+7 more)
core/src/util/: Wav.h  (+5 more)
core/tests/: CMakeLists.txt  DSPPerformanceTests.cpp  EffectProcessorTests.cpp  IRConvolutionTests.cpp  MultiPresetMixerTests.cpp  NamCalibrationProbe.cpp  PresetManagementWorkflowTests.cpp  PresetStorageTests.cpp  RealtimeConvolverTests.cpp  ResourceLibraryDeleteWorkflowTests.cpp  ResourcePreviewWorkflowTests.cpp  SampleRateConverterTests.cpp  SignalChainThreadingBenchmark.cpp  SignalGraphExecutorTests.cpp  StereoProcessingTests.cpp  TestWavLoad.cpp
core/ui/: index.full.backup.html  index.html  index.template.html  package-lock.json  package.json  tsconfig.json
docs/: DESIGN.md  TODO.md  agent-quickstart.md  architecture-overview.md  automation-and-midi-mapping.md  composite-effects.md  css-theme-system-quickstart.md  css-theme-system.md  data-models.md  features.md  fx-library-and-signal-chain-architecture.md  fx-library.md  network-api.md  settings-storage-v1.md  signal-chain.md  signal-level-handling.md  theme-system.md  user-interface.md
docs/guide/: README.md  community.md  getting-started.md  introduction.md  metronome.md  multi-preset-mixer.md  preset-browser.md  riff-library.md  settings.md  signal-chain-editor.md  signal-chain.md  template.html  tuner.md
docs/plans/: 2026-02-25-fx-review.md  2026-04-14-nam-ir-normalization-plan.md  2026-04-28-typescript-refactor-cleanup-log.md  SAMPLE_RATE_HANDLING_REVIEW.md  amp-effect-plan.md  cloudflare-presets-platform-mvp.md  cloudflare-presets-platform-mvp.sql  cloudflare-worker-wrangler.template.toml  effect-layout-editor.md  factory-content-bootstrap-backlog.md  factory-content-bootstrap-plan.md  fx-review.md  multi-preset-mixer-ui-plan.md  preset-generator-spec.md
docs/prd/: PRD.md  user-stories.md
installer/: SoundshedGuitar.iss
iplug2/src/: CMakeLists.txt
juce/: CMakeLists.txt  setup-notes.md
juce/benchmarks/: Benchmarks.cpp
juce/cmake/: PamplejuceIPP.cmake  SharedCodeDefaults.cmake
juce/packaging/: installer.iss
juce/source/: JuceHostedPluginEffect.cpp  JuceHostedPluginEffect.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessorAdapter.cpp  PluginProcessorAdapter.h
juce/tests/: HostedPluginGrapheneStateTests.cpp  NamCalibrationProbeGatewayTests.cpp  readme.md
prompts/: Initial prompt.txt
scripts/: convert-css-variables.ps1
src/: CMakeLists.txt  README.md  cmake_install.cmake
src/cmake/: CopyVst3Bundle.cmake  FetchDependencies.cmake
src/config/: GuitarFXConfig.h  NAMGuitarConfig.h  config.h
src/docs/: customization-plan.md  preset-model-v2-design.md
src/resources/: app.manifest  main.rc
src/src/: CMakeLists.txt  GuitarFXPlugin.cpp  GuitarFXPlugin.h  NAMGuitarPlugin.cpp  NAMGuitarPlugin.h  cmake_install.cmake  main.cpp
src/src/NAMGuitarFX.dir/Release/NAMGuitarFX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  NAMGuitarFX.lastbuildstate
src/src/dsp/: AmpModelManager.cpp  AmpModelManager.h  DelayEffect.h  EffectProcessor.h  EffectRegistry.cpp  EffectRegistry.h  GraphDSPManager.h  IRManager.cpp  IRManager.h  IRTypes.h  MultiPresetMixer.cpp  MultiPresetMixer.h  NAMDSPManager.cpp  NAMDSPManager.h  ParametricEQ.h  RealtimeConvolver.cpp  RealtimeConvolver.h  ReverbEffect.h  SignalGraphExecutor.cpp  SignalGraphExecutor.h  SimdFFT.h  SimpleCabSim.h
src/src/dsp/effects/: BuiltinAmpEffect.h  BuiltinEffects.h  CompressorEffect.h  DelayEffect.h  DistortionEffect.h  GainEffect.h  IRCabEffect.h  MultiModelNAMAmpEffect.h  NAMAmpEffect.h  NoiseGateEffect.h  OptimizedNAMAmpEffect.h  ParametricEQEffect.h  PitchShiftEffect.h  ReverbEffect.h  SimpleCabEffect.h  SynthSawEffect.h
src/src/models/: ModelHasher.cpp  ModelHasher.h
src/src/network/: PresetServiceClient.cpp  PresetServiceClient.h
src/src/platform/: CMakeLists.txt  cmake_install.cmake
src/src/platform/aax/: CMakeLists.txt
src/src/platform/app/: CMakeLists.txt  cmake_install.cmake
src/src/platform/au/: CMakeLists.txt
src/src/platform/vst3/: CMakeLists.txt  NAMGuitarFX_VST3.cpp  cmake_install.cmake
src/src/presets/: PresetManager.cpp  PresetManager.h  PresetStorage.cpp  PresetStorage.h  PresetTypes.cpp  PresetTypes.h  PresetTypesJson.h
src/src/resources/: ResourceLibrary.cpp  ResourceLibrary.h
src/src/ui/: WebUIBridge.cpp  WebUIBridge.h
src/src/util/: FileSystem.cpp  FileSystem.h
src/tests/: CMakeLists.txt  DefaultPresetIntegrityTests.cpp  EffectProcessorTests.cpp  IRConvolutionTests.cpp  MultiPresetMixerTests.cpp  NAMModelDiagnosticTests.cpp  NAMPerformanceBenchmark.cpp  OfflineProcessingTest.cpp  PresetDSPLoadingTests.cpp  PresetDSPProcessingTests.cpp  PresetStorageTests.cpp  RealAudioProcessingTests.cpp  SampleRateBufferTests.cpp  TestWavLoad.cpp
tools/preset-generator/: README.md  package-lock.json  package.json  tsconfig.json
(+319 files in other folders)
